--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "dependencies": {
     "@floating-ui/react": "^0.27.15",
     "@headlessui/react": "^2.2.7",
+    "@heroicons/react": "^2.2.0",
     "@phosphor-icons/react": "^2.1.10",
     "@tanstack/react-table": "^8.21.3",
-    "next": "15.4.5",
+    "next": "^15.5.2",
     "next-intl": "^4.3.4",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0",
+    "react-modal": "^3.16.3",
+    "react-select": "^5.10.2",
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
