--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@atlaskit/pragmatic-drag-and-drop": "^1.7.7",
     "@floating-ui/react": "^0.27.15",
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
@@ -22,7 +23,8 @@
     "react-hook-form": "^7.62.0",
     "react-modal": "^3.16.3",
     "react-select": "^5.10.2",
-    "sonner": "^2.0.7"
+    "sonner": "^2.0.7",
+    "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
