--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-modal": "^3.16.3",
     "react-select": "^5.10.2",
     "sonner": "^2.0.7",
