--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-modal": "^3.16.3",
     "react-select": "^5.10.2",
     "sonner": "^2.0.7",
-    "tiny-invariant": "^1.3.3"
+    "tiny-invariant": "^1.3.3",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -33,6 +34,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/ws": "^8.18.1",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
     "eslint-plugin-simple-import-sort": "^12.1.1",
