--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-select": "^5.10.2",
     "sonner": "^2.0.7",
     "tiny-invariant": "^1.3.3",
+    "uuid": "^13.0.0",
     "ws": "^8.18.3"
   },
   "devDependencies": {
