--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@algion/react-ui-library": "github:Algion-Co/react-ui-library",
+    "@algion/react-ui-library": "git+https://${GITHUB_TOKEN}@github.com/Algion-Co/react-ui-library",
     "@atlaskit/pragmatic-drag-and-drop": "^1.7.7",
     "@floating-ui/react": "^0.27.15",
     "@headlessui/react": "^2.2.7",
